--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "daisyui": "5.5.14",
     "json-rpc-2.0": "^1.6.0",
     "minimatch": "^10.1.1",
-    "next": "15.2.4",
+    "next": "^16.1.6",
     "next-pwa": "5.6.0",
     "next-seo": "6.6.0",
     "next-themes": "0.4.6",
